Rest API 주소 부분 변경